--- a/css/style.css
+++ b/css/style.css
@@ -423,6 +423,127 @@ width: 100%;
     text-decoration: line-through;
 }
 
+.services .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;    
+}
+
+.services .box-container .box{
+    flex: 1 1 30rem;
+    border-radius: .5rem;
+    padding: 1rem;
+    text-align: center;
+}
+
+.services .box-container .box i{
+     padding: 1rem;
+     font-size: 5rem;
+     color: var(--orange); 
+}
+
+.services .box-container .box h3{
+     font-size: 2.5rem;
+     color:#333; 
+}
+
+.services .box-container .box p{
+     font-size: 1.5rem;
+     color:#666;
+     padding: 1rem 0; 
+}
+
+.services .box-container .box:hover{
+    box-shadow: 0 1 rem 2rem rgba(0,0,0,.2);
+}
+
+/* gallarey css */
+
+.gallery .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.gallery .box-container .box{
+    overflow: hidden;
+    box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
+    border: 1rem solid#fff;
+    border-radius: .5rem;
+    flex: 1 1 30rem;
+    height: 25rem;
+    position:relative;
+}
+
+.gallery .box-container .box img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.gallery .box-container .box .content{
+    position: absolute;
+    top:-100%; left: 0;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    background:rgba(0,0,0,.7);
+    padding: 2rem;
+    padding-top: 5rem;
+}
+
+.gallery .box-container .box:hover .content{
+   top: 0; 
+}
+
+.gallery .box-container .box .content h3{
+    font-size: 2.5rem;
+    color: var(--orange);
+}
+
+.gallery .box-container .box .content p{
+    font-size: 1.5rem;
+    color:#eee;
+    padding: .5rem 0;
+}
+
+.review .review-slider{
+    padding-bottom: 2rem;
+}
+
+.review .box{
+    padding: 2rem;
+    text-align: center;
+    box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
+    border-radius: .5rem;
+}
+
+.review .box img{
+    height: 13rem;
+    width: 13rem;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 1rem;
+}
+
+.review .box h3{
+    color: #333;
+    font-size: 2.5rem;
+}
+
+.review .box p{
+    color: #666;
+    font-size: 2.5rem;
+    padding: 1rem 0;
+
+}
+
+.review .box .starts i{
+    color:var(--orange);
+    font-size: 1.7rem;
+  
+    
+}
 
 
 
