--- a/css/style.css
+++ b/css/style.css
@@ -519,8 +519,8 @@ width: 100%;
 }
 
 .review .box img{
-    height: 13rem;
-    width: 13rem;
+    height:13rem;
+    width:13rem;
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 1rem;
@@ -534,20 +534,63 @@ width: 100%;
 .review .box p{
     color: #666;
     font-size: 2.5rem;
-    padding: 1rem 0;
+    padding:1rem 0;
 
 }
 
-.review .box .starts i{
+.review .box .stars i{
     color:var(--orange);
     font-size: 1.7rem;
   
     
 }
 
+.contact .row{
+    display: flex;
+    flex-wrap:wrap; 
+    gap: 1.5rem;
+    align-items: center;
+}
+
+.contact .row .image{
+    flex:1 1 35rem ;
+}
+
+.contact .row .image img{
+ width: 100%;
+}
+
+.contact .row  form{
+     flex:1 1 50rem ; 
+     padding:2rem;
+     box-shadow: 0 1rem 2rem rgba(0,0,0,.1);  
+     border-radius: .5rem;
+}
+
+.contact .row  form .inputBox{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.contact .row  form .inputBox input,.contact .row  form textarea{
+    width: 49%;
+    margin: 1rem 0;
+    padding: 1rem;
+    font-size:1.7rem ;
+    color: #333;
+    background:#f7f7f7 ;
+    text-transform:none ;
+}
+
+.contact .row  form textarea{
+    height: 15rem;
+    resize: none;
+    width: 100%;
+}
 
 
-/* 48.18minitus */
+
 
 
 
@@ -618,13 +661,20 @@ width: 100%;
 
  }
 
+
+
+
   @media (max-width:450px){
     html{
-    font-size:50%; 
-}
-.heading span{
+    font-size: 50%; 
+  }
+  .heading span{
     font-size: 2.5rem;
-}
+  }
+
+  .contact .row form .inputBox input{
+    width:100%;
+  }
 
  }
 
