--- a/css/style.css
+++ b/css/style.css
@@ -545,6 +545,8 @@ width: 100%;
     
 }
 
+/* contact css */
+
 .contact .row{
     display: flex;
     flex-wrap:wrap; 
@@ -560,21 +562,21 @@ width: 100%;
  width: 100%;
 }
 
-.contact .row  form{
+.contact .row form{
      flex:1 1 50rem ; 
      padding:2rem;
      box-shadow: 0 1rem 2rem rgba(0,0,0,.1);  
      border-radius: .5rem;
 }
 
-.contact .row  form .inputBox{
+.contact .row form .inputBox{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
-.contact .row  form .inputBox input,.contact .row  form textarea{
-    width: 49%;
+.contact .row form .inputBox input, .contact .row form textarea{
+    width:49%;
     margin: 1rem 0;
     padding: 1rem;
     font-size:1.7rem ;
@@ -587,6 +589,12 @@ width: 100%;
     height: 15rem;
     resize: none;
     width: 100%;
+}
+
+
+/* brand */
+.brand-container{
+    text-align: center;
 }
 
 
@@ -671,12 +679,14 @@ width: 100%;
   .heading span{
     font-size: 2.5rem;
   }
-
+     
   .contact .row form .inputBox input{
     width:100%;
+
   }
 
  }
 
 
      
+/* 54.51m */
