--- a/css/style.css
+++ b/css/style.css
@@ -507,6 +507,8 @@ width: 100%;
     padding: .5rem 0;
 }
 
+/* review css */
+
 .review .review-slider{
     padding-bottom: 2rem;
 }
@@ -533,7 +535,7 @@ width: 100%;
 
 .review .box p{
     color: #666;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     padding:1rem 0;
 
 }
