--- a/css/style.css
+++ b/css/style.css
@@ -594,17 +594,81 @@ width: 100%;
 }
 
 
+
+
 /* brand */
-.brand-container{
+
+.brand-container {
     text-align: center;
+    padding: 2rem 0;
+}
+
+.brand-container .swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.brand-container .swiper-slide img {
+    width: 150px;       /* increase or reduce as you want */
+    height: 150px;      /* SAME height = square */
+    object-fit: contain;
+    background: #fff;   /* optional clean white background */
+    padding: 10px;      /* gives spacing inside box */
+    border-radius: 10px;
+    transition: 0.3s ease;
+    filter: grayscale(40%);
+}
+
+.brand-container .swiper-slide img:hover {
+    filter: grayscale(0);
+    transform: scale(1.1);
 }
 
 
 
+/* footer */
+
+.footer{
+    background:#333
+}
+
+.footer box-container{
+    display:flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.footer box-container .box{
+    padding:1rem 0;
+    flex:1 1 25rem;
+
+}
+
+.footer box-container .box h3{
+    font-size: 2.5rem;
+    padding: .7rem;
+    color: #fff;
+}
+
+.footer box-container .box p{
+    font-size: 1.5rem;
+    padding: .7rem;
+    color: #eee;
+}
 
 
+.footer box-container .box a{
+    display: block;
+    font-size: 1.5rem;
+    padding: .7rem;
+    color: #fff;
+}
 
-
+.footer box-container .box a:hover{
+    color: var(--orange);
+    text-decoration: underline;
+}
 
 
 /* ################# */
